improved 1d gutters (no overspill); fixed a merge bug; bumped version
now grx-row and grx-col with gutter won't use negative margins and thus
won't  appear larger than intended.
wrapping grx-row/grx-col still use negative margins for a 2d gutter.

--- a/src/_logic.scss
+++ b/src/_logic.scss
@@ -1,42 +1,9 @@
-/*!
-* Grx - a lightweight layout grid
-* http://github.com/mike-shtil/grx
-*
-* by: Michael (Mike) Shtilerman
-* http://mike-is.me
-* distributed under MIT license
-*/
-
-///////////
-//container
-///////////
-
-.#{$row}, .#{$col} {
-    display: flex;
-    align-items: stretch;
-    box-sizing: border-box;
-    ////////
-    //gutter
-    ////////
-    @each $name, $value in $gutters {
-        &.gutter-#{$name} {
-            margin: -$value/2;
-            > * {
-                padding: $value/2;
-            }
-        }
-    }
-}
-
-.#{$col} {
-  flex-direction: column;
-}
-
 ////////////////////
 //container children
 ////////////////////
 
-.#{$row}, .#{$row} > * {
+.#{$row},
+.#{$row} > * {
     // flex-grow: 0;
     // flex-shrink: 1;
     box-sizing: border-box;
@@ -63,7 +30,7 @@
 //dynamic breakpoints
 @each $bpname, $bpvalue in $breakpoints {
      @media all and (min-width: #{$bpvalue}){
-      .#{$row} {
+        .#{$row} {
             //default base
             @for $n from 1 through $base_default {
                 > .#{$size}-#{$bpname}-#{$n} {
@@ -81,65 +48,163 @@
         }
     }
 }
-.#{$size}-auto {
-    //column which takes up entire remaining free space (width) in the row
-    flex: 2 2 auto;
-}
-
 /////////////////
 //general element
 /////////////////
 
-.#{$row}, .#{$col} {
-    //justify (horizontal in row)
-    &.justify-start {
-        justify-content: flex-start;
-        //text-align: left;
+.#{$col},
+.#{$row} {
+    display: flex;
+    box-sizing: border-box;
+    ////////
+    //gutter
+    ////////
+    &[class*="gutter-"] {
+        &:after,
+        &:before {
+            content: '';
+        }
     }
-     &.justify-center,
-    %justify-center {
-        justify-content: center;
-        //text-align: center;
+    @each $name, $value in $gutters {
+        &.gutter-#{$name} {
+            &:not(.wrap) {
+                overflow: hidden;
+
+                &:after,
+                &:before {
+                    //offset for gutter on external elements;
+                    margin-left: -$value/2;
+                }
+
+                > * {
+                    padding-right: $value/2;
+                    padding-left: $value/2;
+                }
+            }
+
+            &.wrap {
+                margin: -$value/2;
+
+                > * {
+                    padding: $value/2;
+                }
+            }
+        }
     }
-    &.justify-end {
-        justify-content: flex-end;
-        //text-align: right;
-    }
-    //align (vertical in row)
-    &.align-start {
-        align-items: flex-start;
-    }
-     &.align-center,
-    %align-center {
-        align-items: center;
-    }
-    &.align-end {
-        align-items: flex-end;
-    }
-    &.align-stretch {
-        align-items: stretch;
-    }
-    &.center {
-        //align and justify
-        @extend .align-center;
-        @extend .justify-center;
-    }
+
     &.wrap {
         flex-wrap: wrap;
     }
-    > .pull-end {
-      margin-left: auto !important;
+
+    &.center {
+        @extend %justify-center;
+        @extend %align-center;
     }
+    //deprecated
+    &.align-start {
+        @extend %align-start;
+    }
+
+    &.align-center {
+        @extend %align-center;
+    }
+
+    &.align-end {
+        @extend %align-end;
+    }
+
+    &.justify-start {
+        @extend %justify-start;
+    }
+
+    &.justify-center {
+        @extend %justify-center;
+    }
+
+    &.justify-end {
+        @extend %justify-end;
+    }
+
+    > .#{$size}-auto {
+        //column which takes up entire remaining free space (width) in the row
+        flex: 2 2 auto;
+    }
+}
+
+.#{$row} {
+    &[class*="#{$items}-"] {
+        &[class*="-right"] {
+            @extend %justify-end;
+        }
+
+        &[class*="-center"] {
+            @extend %justify-center;
+        }
+
+        &[class*="-left"] {
+            @extend %justify-start;
+        }
+
+        &[class*="-bottom"] {
+            @extend %align-end;
+        }
+
+        &[class*="-middle"] {
+            @extend %align-center;
+        }
+
+        &[class*="-top"] {
+            @extend %align-start;
+        }
+    }
+
+     > .pull-left,
     > .pull-start {
-      margin-right: auto !important;
+        margin-right: auto !important;
+    }
+
+     > .pull-right,
+    > .pull-end {
+        margin-left: auto !important;
     }
 }
 
 .#{$col} {
-  > .pull-end {
-      margin-top: auto !important;
-  }
-  > .pull-start {
-      margin-bottom: auto !important;
-  }
+    flex-direction: column;
+
+    &[class*="#{$items}-"] {
+        &[class*="-right"] {
+            @extend %align-end;
+        }
+
+        &[class*="-center"] {
+            @extend %align-center;
+        }
+
+        &[class*="-left"] {
+            @extend %align-start;
+        }
+
+        &[class*="-bottom"] {
+            @extend %justify-end;
+        }
+
+        &[class*="-middle"] {
+            @extend %justify-center;
+        }
+
+        &[class*="-top"] {
+            @extend %justify-start;
+        }
+    }
+
+    .pull-bottom,
+    > .pull-start {
+        margin-bottom: auto !important;
+    }
+
+    .pull-top,
+    > .pull-end {
+        margin-top: auto !important;
+    }
 }
