--- a/src/grx.scss
+++ b/src/grx.scss
@@ -8,183 +8,6 @@
 * distributed under MIT license
 */
 
-<<<<<<< HEAD
 @import "params";
+@import "partials";
 @import "logic";
-=======
-@import '_params.scss';
-@import '_partials.scss';
-
-///////////
-//container
-///////////
-
-.#{$row}, .#{$col} {
-    display: flex;
-    box-sizing: border-box;
-
-    ////////
-    //gutter
-    ////////
-    @each $name, $value in $gutters {
-        &.gutter-#{$name} {
-            margin: -$value/2;
-            > * {
-                padding: $value/2;
-            }
-        }
-    }
-}
-
-.#{$col} {
-  flex-direction: column;
-}
-
-////////////////////
-//container children
-////////////////////
-
-.#{$row}, .#{$row} > * {
-    // flex-grow: 0;
-    // flex-shrink: 1;
-    box-sizing: border-box;
-}
-//default (null) breakpoint
-@media all and (min-width: 0) {
-    //default base
-    .#{$row} {
-        @for $n from 1 through $base_default {
-            > .#{$size}-#{$n} {
-                flex-basis: percentage($n / $base_default);
-            }
-        }
-        //dynamic bases
-        @each $base in $bases {
-             @for $n from 1 through $base{
-                > .#{$size}-#{$n}-#{$base} {
-                    flex-basis: percentage($n / $base);
-                }
-            }
-        }
-    }
-}
-//dynamic breakpoints
-@each $bpname, $bpvalue in $breakpoints {
-     @media all and (min-width: #{$bpvalue}){
-      .#{$row} {
-            //default base
-            @for $n from 1 through $base_default {
-                > .#{$size}-#{$bpname}-#{$n} {
-                    flex-basis: percentage($n / $base_default);
-                }
-            }
-            //dynamic bases
-            @each $base in $bases {
-                 @for $n from 1 through $base{
-                    > .#{$size}-#{$bpname}-#{$n}-#{$base} {
-                        flex-basis: percentage($n / $base);
-                    }
-                }
-            }
-        }
-    }
-}
-.#{$size}-auto {
-    //column which takes up entire remaining free space (width) in the row
-    flex: 2 2 auto;
-}
-
-/////////////////
-//general element
-/////////////////
-
-.#{$row}, .#{$col} {
-    &.wrap {
-        flex-wrap: wrap;
-    }
-    &.center {
-      @extend %justify-center;
-      @extend %align-center;
-    }
-
-    //deprecated
-    &.align-start {
-      @extend %align-start;
-    }
-    &.align-center {
-      @extend %align-center;
-    }
-    &.align-end {
-      @extend %align-end;
-    }
-    &.justify-start {
-      @extend %justify-start;
-    }
-    &.justify-center {
-      @extend %justify-center;
-    }
-    &.justify-end {
-      @extend %justify-end;
-    }
-}
-
-.#{$row} {
-  &[class*="#{$items}-"] {
-    &[class*="-right"] {
-      @extend %justify-end;
-    }
-    &[class*="-center"] {
-      @extend %justify-center;
-    }
-    &[class*="-left"] {
-      @extend %justify-start;
-    }
-    &[class*="-bottom"] {
-      @extend %align-end;
-    }
-    &[class*="-middle"] {
-      @extend %align-center;
-    }
-    &[class*="-top"] {
-      @extend %align-start;
-    }
-  }
-
-  > .pull-start, > .pull-left {
-    margin-right: auto !important;
-  }
-  > .pull-end, > .pull-right {
-    margin-left: auto !important;
-  }
-}
-
-.#{$col} {
-  &[class*="#{$items}-"] {
-    &[class*="-right"] {
-      @extend %align-end;
-    }
-    &[class*="-center"] {
-      @extend %align-center;
-    }
-    &[class*="-left"] {
-      @extend %align-start;
-    }
-    &[class*="-bottom"] {
-      @extend %justify-end;
-    }
-    &[class*="-middle"] {
-      @extend %justify-center;
-    }
-    &[class*="-top"] {
-      @extend %justify-start;
-    }
-  }
-
-  > .pull-start, .pull-bottom {
-    margin-bottom: auto !important;
-  }
-  > .pull-end, .pull-top {
-    margin-top: auto !important;
-  }
-}
->>>>>>> origin/master
